--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uiuc-dv-narrative-vis",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://xiaoxianma.github.io/uiuc-ds-narrative-vis",
+  "homepage": "http://xiaoxianma.github.io/uiuc-dv-narrative-vis",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
