--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "homepage": "http://xiaoxianma.github.io/uiuc-dv-narrative-vis",
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.17",
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "d3": "^5.16.0",
+    "d3-fetch": "^1.2.0",
+    "d3-geo": "^1.12.1",
+    "d3-scale": "^3.2.1",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-simple-maps": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
