--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "d3-scale": "^3.2.1",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
+    "react-colorscales": "^0.7.3",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "react-simple-maps": "^2.1.2"
+    "react-simple-maps": "^2.1.2",
+    "react-tooltip": "^4.2.7"
   },
   "scripts": {
     "start": "react-scripts start",
