--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-simple-maps": "^2.1.2",
-    "react-tooltip": "^4.2.7"
+    "react-tooltip": "^4.2.7",
+    "react-vis": "^1.11.7"
   },
   "scripts": {
     "start": "react-scripts start",
