--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "d3-scale": "^3.2.1",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
+    "react-annotation": "^2.2.1",
     "react-colorscales": "^0.7.3",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
