--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-scripts": "3.4.1",
     "react-simple-maps": "^2.1.2",
     "react-tooltip": "^4.2.7",
-    "react-vis": "^1.11.7"
+    "react-vis": "^1.11.7",
+    "recharts": "^1.8.5"
   },
   "scripts": {
     "start": "react-scripts start",
