--- a/package.json
+++ b/package.json
@@ -10,19 +10,9 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "d3": "^5.16.0",
-    "d3-fetch": "^1.2.0",
-    "d3-geo": "^1.12.1",
-    "d3-scale": "^3.2.1",
-    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
-    "react-annotation": "^2.2.1",
-    "react-colorscales": "^0.7.3",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "react-simple-maps": "^2.1.2",
-    "react-tooltip": "^4.2.7",
-    "react-vis": "^1.11.7",
-    "recharts": "^1.8.5"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
